dev/non_executable_reasons_record/204.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash

### PlantUMLã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«(Ubuntu16.04)
### â€» Javaã¯ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«æ¸ˆã¿ã®å‰æ
#sudo apt-get install -y graphviz doxygen

### Mac
# brew install graphviz

### plantuml.jarã¯ã‚°ã‚°ã£ã¦ãƒ€ã‚¦ãƒ³ãƒ­ãƒ¼ãƒ‰ã™ã‚‹
ls plantuml.jar
------------------

[0;36m  File [0;32m"<ipython-input-1-64664a8219e7>"[0;36m, line [0;32m13[0m
[0;31m    ls plantuml.jar[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-64664a8219e7>, line 13)

Executability                            : False
